# Hindrance

./: Cargo.toml  build.rs  build.sh
.cargo/: config.toml
.old/: build.sh
.old/src/: error.rs  meshes.rs
.old/src/game/: bundles.rs  components.rs  messages.rs  mod.rs  observers.rs  resources.rs  states.rs  systems.rs
.old/src/game/plugins/: setup.rs
.old/src/game/plugins/menu/: main.rs
.old/src/game/plugins/network/: client.rs
.old/src/shapes/: mod.rs
gameplay/: Cargo.toml
gameplay/rules/: Cargo.toml
gameplay/rules/src/: hexagon.rs  lib.rs  square.rs
gameplay/src/: lib.rs
logic/: Cargo.toml
multiplayer/: Cargo.toml
multiplayer/networking/: Cargo.toml
multiplayer/networking/src/: broadcast.rs
multiplayer/src/: client.rs  lib.rs
multiplayer/src/discovery/: lobby.rs  mod.rs  systems.rs
multiplayer/src/server/: mod.rs
networking/: Cargo.toml
src/: bundles.rs  colors.rs  components.rs  exit_menu.rs  game.rs  game_logic.rs  grid.rs  main.rs  main_menu.rs  observers.rs  square.rs  state.rs  systems.rs  user_interface.rs
src/game/: bundles.rs  components.rs  enums.rs  mod.rs  observers.rs  resources.rs  states.rs  systems.rs
src/game/plugins/: colors.rs  mod.rs  setup.rs
src/game/plugins/menu/: exit.rs  game.rs  lobby.rs  main.rs  mod.rs
src/game/plugins/network/: mod.rs  server.rs
src/game_logic/: bundles.rs  components.rs  enums.rs  mod.rs  observers.rs  resources.rs  systems.rs
src/presentation/: mod.rs
src/presentation/resources/: colors.rs  fonts.rs  mod.rs
src/presentation/resources/meshes/: mod.rs
src/presentation/screens/: main.rs
src/resources/: colors.rs
src/resources/meshes/: mod.rs  primitives.rs
src/screens/: in_lobby.rs  main.rs  mod.rs
src/screens/browsing_lobbies/: bundles.rs  components.rs  mod.rs  resources.rs  systems.rs
src/shapes/: hexagon.rs  mod.rs  square.rs
