[package]
name = "Hindrance"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bevy = { version = "0.18.x", default-features = false, features = ["2d"] }
bevy_quinnet = { version = "0.20.0", features = ["bincode-messages"] }
bevy-steamworks = "0.16.x"
enum_dispatch = "0.3.13"
image = "0.25.x"
log = { version = "*", features = ["max_level_debug", "release_max_level_off"] }
serde = "*"
strum = { version = "0.28.x", features = ["derive"] }
winit = "*"

[features]
default = ["debug"]
debug = ["bevy/debug", "bevy/dynamic_linking"]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = "symbols"
debug = 0
