[package]
name = "Hindrance"
build = "build.rs"
version.workspace = true
edition.workspace = true

[workspace]
members = ["logic", "networking"]

[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = ["2d"] }
bevy_quinnet = { version = "0.20", features = ["bincode-messages"] }
bevy-steamworks = { version = "0.16" }


[dependencies]
bevy = { workspace = true }
bevy-steamworks = { workspace = true }
image = "*"
logic = { path = "logic" }
networking = { path = "networking" }
winit = "*"
log = { version = "*", features = ["max_level_debug", "release_max_level_off"] }

[features]
default = ["debug"]
debug = ["bevy/debug", "bevy/dynamic_linking"]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = "symbols"
debug = 0
