[package]
name = "Hindrance"
build = "build.rs"
version.workspace = true
edition.workspace = true

[workspace]
members = [
    "gameplay",
    "multiplayer",
    "multiplayer/networking",
    "gameplay/rules",
]

[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
bevy = { version = "0.19", default-features = false, features = ["2d"] }
steamworks = "0.13"
bitcode = "0.6"
gameplay = { path = "gameplay" }
multiplayer = { path = "multiplayer" }
networking = { path = "multiplayer/networking" }
rules = { path = "gameplay/rules" }

[dependencies]
bevy = { workspace = true }
image = "*"
winit = "*"
multiplayer = { workspace = true }
gameplay = { workspace = true }
networking = { workspace = true }

[features]
default = ["debug"]
debug = ["bevy/debug", "bevy/dynamic_linking"]

[profile.release]
opt-level = "z"
lto = true
